add: data fetching
Adds:
- Data fetching
- Toast component for error display
- Layout is displayed according to the info in each mission
- Layout has fallback in case of no data

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,9 +19,8 @@
   },
   "plugins": ["react", "prettier", "jsx-a11y"],
   "globals": {
-    "globalThis": true,
     "document": false,
-    "window": false
+    "sessionStorage": false
   },
   "rules": {
     "template-curly-spacing": "off",
