--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "env": {
     "es2021": true,
-    "node": true
+    "node": true,
+    "jest/globals": true
   },
   "extends": [
     "eslint:recommended",
@@ -17,10 +18,11 @@
     "sourceType": "module",
     "parser": "babel-eslint"
   },
-  "plugins": ["react", "prettier", "jsx-a11y"],
+  "plugins": ["react", "prettier", "jsx-a11y", "jest"],
   "globals": {
     "document": false,
-    "sessionStorage": false
+    "sessionStorage": false,
+    "window": true
   },
   "rules": {
     "template-curly-spacing": "off",
